[package]
name = "vello_common"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core data structures and utilities shared across vello crates"
homepage = "https://github.com/cyrup-ai/vello_common"
repository = "https://github.com/cyrup-ai/vello_common"
documentation = "https://docs.rs/vello_common"

[dependencies]
vello_api = { git = "https://github.com/cyrup-ai/vello_api", branch = "main" }
skrifa = "0.31.3"
smallvec = "2.0.0-alpha.11"
bytemuck = "1.23.2"

[features]
default = []
simd = []